--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ profile.name }} - Portfolio</title>
+    <title>{{ profile.name }} - {{ page.portfolio }}</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Josefin+Sans:wght@300;400&display=swap&family=Rubik:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -11,10 +11,15 @@
 
 </head>
 <body>
+<div class="language-selector">
+    <a href="/?lang=en" class="lang {% if request.lang == 'en' %}active{% endif %}">EN</a> /
+    <a href="/?lang=ru" class="lang {% if request.lang == 'ru' %}active{% endif %}">РУС</a>
+</div>
+
 <nav class="navigator">
-    <div><a href="#about" class="nav-link">About</a></div>
+    <div><a href="#about" class="nav-link">{{ page.about }}</a></div>
     {% for project in projects %}
-    <div><a href="#project-{{ loop.index }}" class="nav-link">{{ project.title or 'Untitled Project' }}</a></div>
+    <div><a href="#project-{{ loop.index }}" class="nav-link">{{ project.title or '---' }}</a></div>
     {% endfor %}
 </nav>
 
@@ -24,7 +29,7 @@
 
 <div class="container">
 
-    <h1 class="top-intro">Hi! I'm</h1>
+    <h1 class="top-intro">{{ page.greeting }}</h1>
     <h1 class="top-name">{{ profile.name }}</h1>
 
     <div class="infoblock-alter" id="about">
@@ -41,7 +46,7 @@
         </div>
 
 
-        <div class="title p20">My Skills</div>
+        <div class="title p20">{{ page.skills }}</div>
         <div class="stack">
             {% for skill in profile.skills %}
             <span class="skill"><i class="{{ skill.icon }}"></i> {{ skill.name }}</span>
@@ -49,22 +54,20 @@
         </div>
 
         <div class="contacts">
-            <p><i class="fas fa-envelope"></i> <a href="mailto:{{ contacts.email }}">Email</a></p>
-            <p><i class="fab fa-github"></i> <a href="{{ contacts.github }}" target="_blank">Github</a></p>
-            <p><i class="fab fa-linkedin"></i> <a href="https://{{ contacts.linkedin }}" target="_blank">Linkedin</a></p>
+            {% include "contacts.html" %}
         </div>
 
     </div>
 
-    <h1>Project Showcases</h1>
+    <h1>{{ page.showcases }}</h1>
     {% for project in projects %}
 
     <div class="infoblock {% if loop.index % 2 == 1 %}infoblock-alter{% endif %}" id="project-{{ loop.index }}">
 
         <div class="innerblock">
-            <div class="title">{{ project.title or 'Untitled Project' }}</div>
+            <div class="title">{{ project.title or '---' }}</div>
 
-            <h3>Overview</h3>
+            <h3>{{ page.overview }}</h3>
             <div class="overview">{{ project.overview }}</div>
 
             {% if project.images %}
@@ -86,8 +89,8 @@
             {% endif %}
 
             <div class="meta">
-                <span>Duration: {{ project.duration }}</span>
-                <span>Featuring: {{ project.roles | join(', ') }}</span>
+                <span>{{ page.duration }}: {{ project.duration }}</span>
+                <span>{{ page.featuring }}: {{ project.roles | join(', ') }}</span>
             </div>
         </div>
 
@@ -100,7 +103,7 @@
         <div class="innerblock">
 
             <div class="features">
-                <h3 class="dropdown-toggle"><i class="fas fa-angle-right"></i> Development Features</h3>
+                <h3 class="dropdown-toggle"><i class="fas fa-angle-right"></i> {{ page.dev_features }}</h3>
                 <ul class="dropdown-content">
                     {% for feature in project.development_features %}
                     <li>{{ feature }}</li>
@@ -110,7 +113,7 @@
 
             {% if project.devops_features %}
             <div class="features">
-                <h3 class="dropdown-toggle"><i class="fas fa-angle-right"></i> DevOps Features</h3>
+                <h3 class="dropdown-toggle"><i class="fas fa-angle-right"></i> {{ page.devops_features }}</h3>
                 <ul class="dropdown-content">
                     {% for feature in project.devops_features %}
                     <li>{{ feature }}</li>
@@ -126,10 +129,8 @@
 
 
     <div class="contacts contacts-bottom">
-        <p><i class="fas fa-envelope"></i> <a href="mailto:{{ contacts.email }}">Email</a></p>
-        <p><i class="fab fa-github"></i> <a href="{{ contacts.github }}" target="_blank">Github</a></p>
-        <p><i class="fab fa-linkedin"></i> <a href="https://{{ contacts.linkedin }}" target="_blank">Linkedin</a></p>
-        <div class="meta">Made by me with HTML, CSS, JS :)</div>
+        {% include "contacts.html" %}
+        <div class="meta">{{ page.made_by }}</div>
     </div>
 
 
