--- a/static/styles.css
+++ b/static/styles.css
@@ -131,6 +131,7 @@ h3 {
     object-fit: contain;
     display: none;
     background-color: #212121;
+    cursor: zoom-in; /* Лупа с + при наведении */
 }
 
 .slide.active {
@@ -148,6 +149,10 @@ h3 {
     cursor: pointer;
     font-size: 1.2em;
     border-radius: 4px;
+}
+
+.slider-btn:hover {
+    background: rgba(63, 90, 91, 0.5);
 }
 
 .prev-btn {
@@ -268,7 +273,6 @@ h3 {
     margin: 0;
     padding: 20px;
     font-family: 'Cascadia Code', monospace;
-    font-size: 14px;
     line-height: 1.5;
     min-height: 100%;
     background: #1a1a1a;
