--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,12 @@
 
                 <div class="slides" id="slides-{{ loop.index }}">
                     {% for img in project.images %}
-                    <img src="{{ img }}" alt="Project image" class="slide" onclick="openModal({{ project_loop.index }}, {{ loop.index0 }})">
+                    <img src="{{ img }}"
+                         alt="Project image"
+                         class="slide-image"
+                         height="500"
+                         width="600"
+                         onclick="openModal({{ project_loop.index }}, {{ loop.index0 }})">
                     {% endfor %}
                 </div>
 
@@ -150,7 +155,6 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-javascript.min.js"></script>
 <script src="/static/scripts.js"></script>
 </body>
 </html>
