More performance improvements on mobile & low-end devices

--- a/templates/index.html
+++ b/templates/index.html
@@ -89,6 +89,7 @@
                          class="slide-image"
                          height="500"
                          width="600"
+                         loading="lazy"
                          onclick="openModal({{ project_loop.index }}, {{ loop.index0 }})">
                     {% endfor %}
                 </div>
