--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -1,4 +1,4 @@
 <p><i class="fas fa-envelope"></i> <a href="mailto:vova.cpeda@yandex.ru">Email</a></p>
 <p><i class="fab fa-github"></i> <a href="https://github.com/rivesuvacrispa" target="_blank">Github</a></p>
 <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/vladimir-yagnaev-4ab335272" target="_blank">Linkedin</a></p>
-<p><i class="fas fa-gamepad"></i> <a href="https://itch.io/rivesuvacrispa" target="_blank">Itch.io</a></p>
+<p><i class="fas fa-gamepad"></i> <a href="https://rives-uva-crispa.itch.io/" target="_blank">Itch.io</a></p>
